--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-SERVER_PORT=8080
+server.port=${SERVER_PORT:8081}
+spring.application.name=ms-stores
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms_stores
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
