--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=${SERVER_PORT:8081}
 spring.application.name=ms-stores
 
+server.error.include-stacktrace=never
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/ms_stores
 spring.datasource.username=postgres
 spring.datasource.password=postgres
